<resources>
    <string name="carrier_vm_number">*86</string>
    <string name="Abkhazia__Georgia_">Abkhazia (Georgia)</string>
    <string name="Afghanistan">Afghanistan</string>
    <string name="Albania">Albania</string>
    <string name="Algeria">Algeria</string>
    <string name="American_Samoa__US_">American Samoa (US)</string>
    <string name="Andorra">Andorra</string>
    <string name="Angola">Angola</string>
    <string name="Anguilla">Anguilla</string>
    <string name="Antigua_and_Barbuda">Antigua and Barbuda</string>
    <string name="Argentine_Republic">Argentine Republic</string>
    <string name="Armenia">Armenia</string>
    <string name="Aruba__Netherlands_">Aruba (Netherlands)</string>
    <string name="Australia">Australia</string>
    <string name="Austria">Austria</string>
    <string name="Azerbaijani_Republic">Azerbaijani Republic</string>
    <string name="Bahamas">Bahamas</string>
    <string name="Bahrain">Bahrain</string>
    <string name="Bangladesh">Bangladesh</string>
    <string name="Barbados">Barbados</string>
    <string name="Belarus">Belarus</string>
    <string name="Belgium">Belgium</string>
    <string name="Belize">Belize</string>
    <string name="Benin">Benin</string>
    <string name="Bermuda__UK_">Bermuda (UK)</string>
    <string name="Bhutan">Bhutan</string>
    <string name="Bolivia">Bolivia</string>
    <string name="Bosnia_and_Herzegovina">Bosnia and Herzegovina</string>
    <string name="Botswana">Botswana</string>
    <string name="Brazil">Brazil</string>
    <string name="British">British</string>
    <string name="British_Virgin_Islands__UK_">British Virgin Islands (UK)</string>
    <string name="Brunei_Darussalam">Brunei Darussalam</string>
    <string name="Bulgaria">Bulgaria</string>
    <string name="Burkina_Faso">Burkina Faso</string>
    <string name="Burundi">Burundi</string>
    <string name="Cambodia">Cambodia</string>
    <string name="Cameroon">Cameroon</string>
    <string name="Canada">Canada</string>
    <string name="Cape_Verde">Cape Verde</string>
    <string name="Cayman_Islands__UK_">Cayman Islands (UK)</string>
    <string name="Central_African_Republic">Central African Republic</string>
    <string name="Chad">Chad</string>
    <string name="Chile">Chile</string>
    <string name="China">China</string>
    <string name="Colombia">Colombia</string>
    <string name="Comoros">Comoros</string>
    <string name="Cook_Islands__NZ_">Cook Islands (NZ)</string>
    <string name="Costa_Rica">Costa Rica</string>
    <string name="Cote_d_Ivoire">"Cote d'Ivoire"</string>
    <string name="Croatia">Croatia</string>
    <string name="Cuba">Cuba</string>
    <string name="Cyprus">Cyprus</string>
    <string name="Czech_Republic">Czech Republic</string>
    <string name="Democratic_Republic_of_the_Congo">Democratic Republic of the Congo</string>
    <string name="Denmark">Denmark</string>
    <string name="Djibouti">Djibouti</string>
    <string name="Dominica">Dominica</string>
    <string name="Dominican_Republic">Dominican Republic</string>
    <string name="East_Timor">East Timor</string>
    <string name="Ecuador">Ecuador</string>
    <string name="Egypt">Egypt</string>
    <string name="El_Salvador">El Salvador</string>
    <string name="Equatorial_Guinea">Equatorial Guinea</string>
    <string name="Eritrea">Eritrea</string>
    <string name="Estonia">Estonia</string>
    <string name="Ethiopia">Ethiopia</string>
    <string name="Falkland_Islands__Malvinas_">Falkland Islands (Malvinas)</string>
    <string name="Faroe_Islands__Denmark_">Faroe Islands (Denmark)</string>
    <string name="Federated_States_of_Micronesia">Federated States of Micronesia</string>
    <string name="Fiji">Fiji</string>
    <string name="Finland">Finland</string>
    <string name="France">France</string>
    <string name="French_Guiana__France_">French Guiana (France)</string>
    <string name="French_Polynesia__France_">French Polynesia (France)</string>
    <string name="Gabonese_Republic">Gabonese Republic</string>
    <string name="Gambia">Gambia</string>
    <string name="Georgia">Georgia</string>
    <string name="Germany">Germany</string>
    <string name="Ghana">Ghana</string>
    <string name="Gibraltar__UK_">Gibraltar (UK)</string>
    <string name="Greece">Greece</string>
    <string name="Greenland__Denmark_">Greenland (Denmark)</string>
    <string name="Grenada">Grenada</string>
    <string name="Guadeloupe__France_">Guadeloupe (France)</string>
    <string name="Guam__US_">Guam (US)</string>
    <string name="Guatemala">Guatemala</string>
    <string name="Guinea">Guinea</string>
    <string name="Guinea_Bissau">Guinea-Bissau</string>
    <string name="Guyana">Guyana</string>
    <string name="Haiti">Haiti</string>
    <string name="Honduras">Honduras</string>
    <string name="Hong_Kong__PRC_">Hong Kong (PRC)</string>
    <string name="Hungary">Hungary</string>
    <string name="Iceland">Iceland</string>
    <string name="India">India</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Iran">Iran</string>
    <string name="Iraq">Iraq</string>
    <string name="Ireland">Ireland</string>
    <string name="Israel">Israel</string>
    <string name="Italy">Italy</string>
    <string name="Jamaica">Jamaica</string>
    <string name="Japan">Japan</string>
    <string name="Jordan">Jordan</string>
    <string name="Kazakhstan">Kazakhstan</string>
    <string name="Kenya">Kenya</string>
    <string name="Kiribati">Kiribati</string>
    <string name="Korea__North">Korea, North</string>
    <string name="Korea__South">Korea, South</string>
    <string name="Kuwait">Kuwait</string>
    <string name="Kyrgyz_Republic">Kyrgyz Republic</string>
    <string name="Laos">Laos</string>
    <string name="Latvia">Latvia</string>
    <string name="Lebanon">Lebanon</string>
    <string name="Lesotho">Lesotho</string>
    <string name="Liberia">Liberia</string>
    <string name="Libya">Libya</string>
    <string name="Liechtenstein">Liechtenstein</string>
    <string name="Lithuania">Lithuania</string>
    <string name="Luxembourg">Luxembourg</string>
    <string name="Macau__PRC_">Macau (PRC)</string>
    <string name="Madagascar">Madagascar</string>
    <string name="Malawi">Malawi</string>
    <string name="Malaysia">Malaysia</string>
    <string name="Maldives">Maldives</string>
    <string name="Mali">Mali</string>
    <string name="Malta">Malta</string>
    <string name="Maritime">Maritime</string>
    <string name="Martinique__France_">Martinique (France)</string>
    <string name="Marshall_Islands">Marshall Islands</string>
    <string name="Mauritania">Mauritania</string>
    <string name="Mauritius">Mauritius</string>
    <string name="Mexico">Mexico</string>
    <string name="Moldova">Moldova</string>
    <string name="Monaco">Monaco</string>
    <string name="Mongolia">Mongolia</string>
    <string name="Montenegro__Republic_of_">Montenegro (Republic of)</string>
    <string name="Montserrat__UK_">Montserrat (UK)</string>
    <string name="Morocco">Morocco</string>
    <string name="Mozambique">Mozambique</string>
    <string name="Myanmar">Myanmar</string>
    <string name="Namibia">Namibia</string>
    <string name="Nauru">Nauru</string>
    <string name="Nepal">Nepal</string>
    <string name="Netherlands">Netherlands</string>
    <string name="Netherlands_Antilles__Netherlands_">Netherlands Antilles (Netherlands)</string>
    <string name="New_Caledonia__France_">New Caledonia (France)</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="voicemail">Voicemail</string>
    <string name="call_settings">Call settings</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="tty_mode_option_title">TTY mode</string>
    <string name="tty_mode_option_summary">Set TTY mode</string>
    <string name="auto_retry_mode_title">Auto-retry</string>
    <string name="auto_retry_mode_summary">Enable Auto-retry mode</string>
    <string name="voicemail_settings_number_label">Voicemail number</string>
    <string name="onscreenEndCallText">End</string>
    <string name="onscreenShowDialpadText">Dialpad</string>
    <string name="onscreenSpeakerText">Speaker</string>
    <string name="onscreenMuteText">Mute</string>
    <string name="onscreenAddCallText">Add call</string>
    <string name="onscreenMergeCallsText">Merge calls</string>
    <string name="onscreenSwapCallsText">Switch calls</string>
    <string name="onscreenManageConferenceText">Manage conference</string>
    <string name="onscreenAudioText">Audio</string>
    <string name="onscreenMergeButtonShortText">Merge</string>
    <string name="onscreenSwapCallsShortText">Switch</string>
    <string name="onscreenHoldShortText">Hold</string>
    <string name="onscreenOverflowText">More</string>
    <string name="hac_mode_title">Hearing aids</string>
    <string name="hac_mode_summary">Turn on hearing aid compatibility</string>
    <string name="dtmf_tones_title">DTMF tones</string>
    <string name="dtmf_tones_summary">Set the length of DTMF tones</string>
    <string name="voicemail_provider">Service</string>
    <string name="voicemail_settings">Setup</string>
    <string name="other_settings">Other call settings</string>
    <string name="respond_via_sms_setting_title">Quick responses</string>
    <string name="respond_via_sms_setting_summary" />
    <string name="description_image_button_one">one</string>
    <string name="description_image_button_two">two</string>
    <string name="description_image_button_three">three</string>
    <string name="description_image_button_four">four</string>
    <string name="description_image_button_five">five</string>
    <string name="description_image_button_six">six</string>
    <string name="description_image_button_seven">seven</string>
    <string name="description_image_button_eight">eight</string>
    <string name="description_image_button_nine">nine</string>
    <string name="description_image_button_star">star</string>
    <string name="description_image_button_zero">zero</string>
    <string name="description_image_button_pound">pound</string>
    <string name="voicemail_notification_vibrate_when_title">Vibrate</string>
    <string name="voicemail_notification_vibarte_when_dialog_title">Vibrate</string>
    <string name="voicemail_notification_ringtone_title">Ringtone</string>
    <string name="voicemail_notification_vibrate_when_default">never</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="vibrate_on_ring_title">Vibrate when ringing</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="preference_category_ringtone">Ringtone</string>
    <string name="ad_assisted_dialing">Assisted dialing</string>
    <string name="ad_assisted_settings_summary">International dialing while roaming overseas</string>
    <string name="autoanswer_gsm_call_settings">Auto answer on headset</string>
    <string name="title_voicemail_choose_vmvvm">Set default voicemail</string>
    <string name="sum_voicemail_choose_vmvvm">Set default voicemail, visual voicemail or prompt to always choose</string>
    <string name="title_vvm_roaming_prompt">Set roaming voicemail</string>
    <string name="sum_vvm_roaming_prompt">Set roaming voicemail, visual voicemail or prompt to always choose</string>
    <string name="caller_id_title">Caller ID Readout</string>
    <string name="caller_id_sum">Ring Only</string>
    <string name="show_dp">Show dialpad</string>
    <string name="sum_show_dp">Select when the dialpad will automatically be shown</string>
</resources>