<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/call_settings"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:phone="http://schemas.android.com/apk/res/com.android.phone">
    <PreferenceCategory android:persistent="false" android:title="@string/preference_category_ringtone" android:key="button_ringtone_category_key">
        <com.android.phone.DefaultRingtonePreference android:persistent="false" android:title="@string/ringtone_title" android:key="button_ringtone_key" android:dialogTitle="@string/ringtone_title" android:ringtoneType="ringtone" />
        <CheckBoxPreference android:persistent="false" android:title="@string/vibrate_on_ring_title" android:key="button_vibrate_on_ring" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:persistent="false" android:title="@string/other_settings" android:key="button_misc_category_key" />
    <PreferenceScreen android:persistent="false" android:title="@string/voicemail" android:key="button_voicemail_category_key">
        <ListPreference android:persistent="true" android:title="@string/voicemail_provider" android:key="button_voicemail_provider_key" android:summary="@string/sum_voicemail_choose_provider" android:defaultValue="" />
        <PreferenceScreen android:persistent="false" android:title="@string/voicemail_settings" android:key="button_voicemail_setting_key">
            <com.android.phone.EditPhoneNumberPreference android:persistent="false" android:singleLine="true" android:autoText="false" android:title="@string/voicemail_settings_number_label" android:key="button_voicemail_key" android:dialogTitle="@string/voicemail" phone:confirmMode="confirm" />
        </PreferenceScreen>
        <ListPreference android:persistent="false" android:entries="@array/entries_voicemail_choose_vmvvm" android:title="@string/title_voicemail_choose_vmvvm" android:key="button_voicemail_selection_key" android:summary="@string/sum_voicemail_choose_vmvvm" android:dialogTitle="@string/title_voicemail_choose_vmvvm" android:entryValues="@array/entry_values_voicemail_choose_vmvvm" />
        <ListPreference android:persistent="false" android:entries="@array/entries_vvm_roaming_prompt" android:title="@string/title_vvm_roaming_prompt" android:key="button_vvm_roaming_prompt_key" android:summary="@string/sum_vvm_roaming_prompt" android:dialogTitle="@string/title_vvm_roaming_prompt" android:entryValues="@array/entry_values_vvm_roaming_prompt" />
        <RingtonePreference android:persistent="true" android:title="@string/voicemail_notification_ringtone_title" android:key="button_voicemail_notification_ringtone_key" android:defaultValue="content://settings/system/notification_sound" android:ringtoneType="notification" />
        <ListPreference android:persistent="true" android:entries="@array/voicemail_notification_vibrate_when_entries" android:title="@string/voicemail_notification_vibrate_when_title" android:key="button_voicemail_notification_vibrate_when_key" android:defaultValue="@string/voicemail_notification_vibrate_when_default" android:dialogTitle="@string/voicemail_notification_vibarte_when_dialog_title" android:entryValues="@array/voicemail_notification_vibrate_when_values" />
    </PreferenceScreen>
    <CheckBoxPreference android:persistent="false" android:title="@string/dtmf_tone_enable_title" android:key="button_play_dtmf_tone" android:defaultValue="true" />
    <PreferenceScreen android:persistent="false" android:title="@string/respond_via_sms_setting_title" android:key="button_respond_via_sms_key" android:summary="@string/respond_via_sms_setting_summary">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.RespondViaSmsManager$Settings" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/fdn" android:key="button_fdn_key">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.FdnSetting" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/ad_assisted_dialing" android:key="assisted_dialing_setting" android:summary="@string/ad_assisted_settings_summary" />
    <ListPreference android:persistent="false" android:entries="@array/caller_id_display_values" android:title="@string/caller_id_title" android:key="button_callerid_key" android:summary="@string/caller_id_sum" android:defaultValue="0" android:dialogTitle="@string/caller_id_title" android:entryValues="@array/caller_id_values" />
    <CheckBoxPreference android:persistent="false" android:title="@string/auto_retry_mode_title" android:key="button_auto_retry_key" android:summary="@string/auto_retry_mode_summary" />
    <ListPreference android:persistent="false" android:entries="@array/tty_mode_entries" android:title="@string/tty_mode_option_title" android:key="button_tty_mode_key" android:summary="@string/tty_mode_option_summary" android:entryValues="@array/tty_mode_values" />
    <CheckBoxPreference android:persistent="true" android:title="@string/hac_mode_title" android:key="button_hac_key" android:summary="@string/hac_mode_summary" />
    <ListPreference android:persistent="false" android:title="@string/autoanswer_gsm_call_settings" android:key="button_auto_answer_expand_key" />
    <ListPreference android:entries="@array/dtmf_tone_entries" android:title="@string/dtmf_tones_title" android:key="button_dtmf_settings" android:summary="@string/dtmf_tones_summary" android:entryValues="@array/dtmf_tone_values" />
    <PreferenceScreen android:persistent="false" android:title="@string/labelGSMMore" android:key="button_gsm_more_expand_key" android:summary="@string/sum_gsm_call_settings">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.GsmUmtsCallOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/labelCDMAMore" android:key="button_cdma_more_expand_key" android:summary="@string/sum_cdma_call_settings">
        <intent android:targetPackage="com.android.phone" android:action="android.intent.action.MAIN" android:targetClass="com.android.phone.CdmaCallOptions" />
    </PreferenceScreen>
    <PreferenceScreen android:persistent="false" android:title="@string/show_dp" android:key="button_show_dial_pad_key" android:summary="@string/sum_show_dp" />
</PreferenceScreen>